--- a/sandboxes/ecl/fsutils/src/configs/l.conf
+++ b/sandboxes/ecl/fsutils/src/configs/l.conf
@@ -1,10 +1,10 @@
---raw_root=/media/someone/AFAT32P/Photo/
---raw=raw-sorted
---raw_sorted_root=/media/someone/AFAT32P/Photo
---raw_sorted=other-unsorted
+--raw_root=/media/someone/AFAT32P/Photo/other-unsorted/NBToshiba-20111113-photo/julys-foto/
+--raw=uly_foto
+--raw_sorted_root=/media/someone/AFAT32P/Photo/other-unsorted/julia-cell/FOTO/
+--raw_sorted=Old
 --out_root=results
 --dup_prefix=dup-
 --uniq_prefix=uniq-
 --check_uniq=Y
---check_dup=N
+--check_dup=Y
 --verbose=0
